tests/miniJava/neg/006681_mutation.MiniJava
class java { public static void Main void String [ ] java ) { { } } }
